[tool.poetry]
name = "omnivore-thing"
version = "0.1.0"
description = ""
authors = ["Ansel Halliburton <github@anseljh.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "omnivore_thing"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
